      that was silently ignored.  (Closes: #639516)
  * lib/Lintian/Collect/Source.pm:
    + [NT] Removed a requirement for fields that was not needed.
    + [NT] Fixed "index" method for source packages.
  * lib/Lintian/Collect/Package.pm:
    + [JW,NT] Replace use of fail with croak.  (Closes: #637741)
  * lib/Lintian/Profile.pm:
    + [NT] Reject profiles containing an unknown field.
  * lib/Lintian/Tags.pm:
    + [NT] Track which tags had overrides that have been dropped.
  * lib/Text_utils.pm:
    + [NT] Close <p>-tags in dtml_to_html since the output is used
      in xhtml (xml), where all tags must be closed properly.
      (Closes: #639292)

  * private/*:
    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.

  * reporting/harness:
    + [NT] Added missing import statement.

  * t/*:
    + [JW,NT] Fixed test failures caused by unpacking the source
      with a umask different from 0022.  (Closes: #637649)

 -- Niels Thykier <niels@thykier.net>  Wed, 10 Aug 2011 21:09:24 +0200

lintian (2.5.2) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - debian-rules-uses-deprecated-makefile
      - debian-rules-uses-or-modifies-user-only-variable
      - duplicate-changelog-files
      - package-has-long-file-name
      - source-package-component-has-long-file-name
      - udeb-uses-non-gzip-data-tarball
      - upstart-job-in-etc-init.d-not-registered-via-update-rc.d
    + Removed:
      - calls-suidperl-directly
      - suid-perl-script-but-no-perl-suid-dep

  * checks/*:
    + [NT] Migrated to use new methods in the Lintian::Collect
      interfaces rather than accessing the Lab directly.
    + [NT] Removed "fields" from Needs-Info.
  * checks/{debconf,conffiles}.desc:
    + [NT] Added missing bin-pkg-control Needs-Info.
  * checks/{cruft,fields}{,.desc}:
    + [NT] Relocated doc pkg not arch all tag; it was never
      triggered since cruft was a source check and the tag
      could only be triggered for binary packages.