@@ -1,0 +1,32 @@
+.TH FOO 1 "Sep 13, 2008" "Debian GNU/Linux"
+
+.SH DESCRIPTION
+-a
+-b
+-c
+
+
+
+
+
+-d
+-e
+-f
+
+
+
+
+
+
+-g
+-h
+-i
+
+
+
+
+
+
+-j
+-k
+-l
